log
Thu 04 May 2023 02:37:31 AM UTC: 
 tests:  0|5
total_score: 0/70
e2f14b2
Thu 04 May 2023 02:46:55 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  2|4
total_score: 15/70
71d7791
Thu 04 May 2023 02:58:38 AM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘sub’ [-Werror=unused-variable]
   50 |     int sub[10] = {0};
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
d6d98c9
Thu 04 May 2023 02:58:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0f1d9b4
Thu 04 May 2023 03:03:29 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9bb14ec
Thu 04 May 2023 03:09:31 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4c31b95
Thu 04 May 2023 03:14:26 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f1c56bc
